--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -31,22 +31,14 @@
 \newpage
 
 \section{Introduction}
-
+Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523. Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable . le groupe error 523 est compose de 4 étudiants de la promo 2022 d'EPITA. Grâce a ce dernier nous pouvons vous montrer le déroulement du projet, avec quels outils, la gestion du temps et du travail. Ce travail est donc le premier véritable projet que nous devrons réaliser seuls.
 
 \newpage
 \section {A propos du groupe}
 \subsection{Formation du groupe}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
+
 \subsection{Présentation des membres}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
+
 
 \newpage
 \section{Origine et Nature du projet}
