--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -43,11 +43,7 @@ Le cahier des charges qui suit a pour but de présenter le projet du groupe Erro
 \newpage
 \section{Origine et Nature du projet}
 \subsection{Origine du projet}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
+Passion commune pour les films d'horreur
 \subsection{Nature du projet}
 \subsubsection{Type de jeu}
 MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
