--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -6,7 +6,7 @@
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{tikz}
-
+\usepackage{colortbl}
 
 \fancyhead{}
 
@@ -43,26 +43,18 @@ Le cahier des charges qui suit a pour but de présenter le projet du groupe Erro
 \newpage
 \section{Origine et Nature du projet}
 \subsection{Origine du projet}
-Passion commune pour les films d'horreur
+L'idée du projet nous est venue lors d'une discussion autour des films d'horreur sur un trajet de retour. On s'est alors demandé comment rendre ce jeu intéressant et différents des autres tout en restant de près ou de loin accessible à nos capacités. La suite nous est venue naturellement en développant notre idée en groupe. 
+
+\newpage
 \subsection{Nature du projet}
 \subsubsection{Type de jeu}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
+Notre projet est un jeu d'horreur et d'énigme à la première personne.
 \subsubsection{Gameplay}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
+Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé avec une momie qui le pourchasse. Pour finir le jeu ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigme et de course poursuite dans une labyrinthe.
+Pour le multi-joueur, il se déroule à 5 maximum, avec un joueur qui incarnera la momie et pourra à sa guise placer des pièges ou déchiqueter ses victimes.
+Les autres devront comme dans la partie solo essayer de s'échapper.
 \subsubsection{Scénario}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
+C'est l'histoire d'un groupe de touristes, dont notre personnage fait parti, qui avait décidé de visiter une des célèbres pyramides d'Égypte pour découvrir la beauté des lieux et le génie égyptien lié à la construction de ces édifices. Puis quelque chose a dû mal tourner puisque notre héros se réveille seul dans une salle sombre avec aucun souvenir de ce qu'il s'est passé ni du chemin d'arrivée. A travers son parcours semé d'embuches réussira-t-il à rassembler les fragments de clés et ainsi reconstituer le déroulement des événements afin de sortir de cette pyramide maudite ?
 
 \newpage
 \section{Objet de l'étude}
@@ -81,9 +73,45 @@ MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE
 
 \newpage
 \section{Découpage du projet}
-\subsection{Découpage du jeu : description des differentes parties}
-\subsection{Répartition des taches}
+\subsection{Découpage du jeu: description des différentes parties}
 
+\subsection{Répartition des taches}
+\paragraph{}
+\begin{tabular}{|c|c|c|c|}
+\hline 
+\rowcolor{cyan} Avancement & Soutenance 1 & Soutenance 2 & Soutenance 3 \\ 
+\hline 
+\cellcolor{lightgray}Graphisme & + &  &  \\ 
+\hline 
+\cellcolor{lightgray}Script & + &  &  \\ 
+\hline 
+\cellcolor{lightgray}Scénario & ++ &  &  \\ 
+\hline 
+\cellcolor{lightgray}Site Web & + &  &  \\ 
+\hline
+\cellcolor{lightgray}Réseau & + &  &  \\ 
+\hline 
+\cellcolor{lightgray}Musique/Son &  &  &  \\ 
+\hline 
+\end{tabular}
+\paragraph{}
+\begin{tabular}{|c|c|c|c|c|}
+ \hline 
+ \rowcolor{cyan}Tâches \ Pers. & Thomas & Thibal & Max & Flow \\ 
+ \hline 
+ \cellcolor{lightgray}Graphisme & +++ &  &  &  \\ 
+ \hline 
+ \cellcolor{lightgray}Script &  & + & ++ &  \\ 
+ \hline 
+ \cellcolor{lightgray}Scénario & + & + & + & + \\ 
+ \hline 
+ \cellcolor{lightgray}Site Web &  & ++ &  &  \\ 
+ \hline 
+ \cellcolor{lightgray} Réseau & ++ &  &  & ++ \\ 
+ \hline 
+ \cellcolor{lightgray}Musique/Son &  & + & + &  \\ 
+ \hline 
+ \end{tabular}  
 \newpage
 \section{Ressources utilisées}
 \subsection{Le matériel}
