--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -31,65 +31,117 @@
 \newpage
 
 \section{Introduction}
-Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523. Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable . le groupe error 523 est compose de 4 étudiants de la promo 2022 d'EPITA. Grâce a ce dernier nous pouvons vous montrer le déroulement du projet, avec quels outils, la gestion du temps et du travail. Ce travail est donc le premier véritable projet que nous devrons réaliser seuls.
+Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523.
+Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable, un jeu dans lequel un homme dont
+on ne connait pas les origines (du moins au début) doit s'échapper d'une pyramide, garde par une
+momie, entourée de mystère.
+Le groupe error 523 est compose de 4 étudiants de la promo 2022 d’EPITA.
+Grâce aux pages qui vont suivre, vous pourrez aisément constater des différents questionnements
+autours de ce projet, nous pourrons vous montrer le planning de déroulement du projet, avec quels
+outils nous comptons le réaliser, la gestion du temps et du travail que nous avons prévu.
+Pour clore cette introduction, on peut dire que ce travail peut être considéré comme le premier réel
+projet que nous devons faire sur une grande durée et dans la plus grande autonomie.
 
 \newpage
 \section {A propos du groupe}
 \subsection{Formation du groupe}
-
+\paragraph{}
+Arrivant a l'EPITA et ne connaissant personne, nous nous sommes rencontrés durant les premiers mois de l'année, rapidement nous nous sommes rendu compte que nous avions des affinités en communs et que nous nous entendions très bien. En accord sur la plupart des sujets et ayant tous une idée très similaire du projet, nous avons décidé de nous mettre ensemble assez rapidement, en se laissant les derniers mois du premier semestre pour juger de notre capacité à travailler ensemble et si nous pensions pouvoir réussir ce projet ensemble. C'est alors que nous avons décidé de former le groupe Error 523 au début du mois de décembre. Nous pensons que ce projet va nous permettre de progresser aussi bien sur notre capacité à travailler en groupe, à évoluer individuellement, permettre de développer toujours plus nos compétences dans le milieu de l'informatique ainsi que dans la gestion de travaux.
+\paragraph{}
+De plus, ayant tous des domaines de prédilections dans l'informatique, la répartition des tâches (que vous pourrez voir plus loin dans ce même cahier) s'est faite naturellement et à ce jour le travail s'organise assez bien. Malgré des emplois du temps différents car nous ne sommes pas tous dans la même classe, nous arrivons à trouver des moments pour travailler, autant individuellement qu'ensemble.
+\begin{center}
+\textbf{Le plus gros restant encore a faire !}
+\end{center}
+\newpage
 \subsection{Présentation des membres}
+\paragraph{}
+\begin{center}
+Thomas Vaton "Trasher" - 18 ans – Ancien terminale S\newline
+Game designer et programmeur réseaux
+\end{center}
 
+Intéressé par le milieu de l'informatique et très souvent ayant été entouré par des personnes gravitant autour de ce domaine, j'ai rapidement été attiré par ce milieu. Ayant néanmoins que très peu pratiqué avant mon entrée a EPITA, ce fut une grande découverte, qui a été et qui est toujours, à la hauteur de mes espérances.
+
+Au sein du groupe Error 523, je suis principalement chargé du game design mais aussi de la partie réseaux et multi-joueur, ce qui va consister en une tâche de très grande importance, d'autant plus que j'aimerais faire du réseaux dans la suite de mon cursus à EPITA.
+
+J'espère, grâce a ce projet, pouvoir améliorer mes compétences dans le monde de l'informatique, mais aussi dans ma capacité à travailler en groupe, et je compte bien mener ce projet à son terme avec le reste de mon équipe.
 
 \newpage
 \section{Origine et Nature du projet}
 \subsection{Origine du projet}
-L'idée du projet nous est venue lors d'une discussion autour des films d'horreur sur un trajet de retour. On s'est alors demandé comment rendre ce jeu intéressant et différents des autres tout en restant de près ou de loin accessible à nos capacités. La suite nous est venue naturellement en développant notre idée en groupe. 
+L'idée du projet nous est venue lors d'une discussion autour des films
+d'horreur sur un trajet de retour de l'école. On s'est alors demandé comment rendre ce
+jeu intéressant et différents des autres tout en restant de près ou de loin accessible à nos capacités.
+La suite nous est venue naturellement en développant
+notre idée en groupe. Étant partie d'une simple idée de jeu d'horreur, cette dernière a progressivement germée et
+nous avons fini par décider de faire évoluer le personnage dans une pyramide, changeant un peu du
+décor d'une simple maison ou ferme, que l'on retrouve fréquemment dans les jeux de ce style.
+Nous avons pu puiser nos idées de différents autres jeux, tel Slender, Resident Evil ou encore Outlast,
+pour pouvoir imaginer notre jeu. Malgré un décor complètement différents de ces derniers, nous
+comptons bien rendre le jeu un tant soit peu horrifique du moins dans l'ambiance.
+Des courses dans des labyrinthes et des énigmes à résoudre vous attendent donc dans la suite de cette
+description...
 
 \newpage
 \subsection{Nature du projet}
 \subsubsection{Type de jeu}
-Notre projet est un jeu d'horreur et d'énigme à la première personne.
+Notre projet est un jeu d'aventure basé sur l'horreur et des énigmes, le tout à la première personne.
 \subsubsection{Gameplay}
 Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé avec une momie qui le pourchasse. Pour finir le jeu ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigme et de course poursuite dans une labyrinthe.
 Pour le multi-joueur, il se déroule à 5 maximum, avec un joueur qui incarnera la momie et pourra à sa guise placer des pièges ou déchiqueter ses victimes.
 Les autres devront comme dans la partie solo essayer de s'échapper.
 \subsubsection{Scénario}
-C'est l'histoire d'un groupe de touristes, dont notre personnage fait parti, qui avait décidé de visiter une des célèbres pyramides d'Égypte pour découvrir la beauté des lieux et le génie égyptien lié à la construction de ces édifices. Puis quelque chose a dû mal tourner puisque notre héros se réveille seul dans une salle sombre avec aucun souvenir de ce qu'il s'est passé ni du chemin d'arrivée. A travers son parcours semé d'embuches réussira-t-il à rassembler les fragments de clés et ainsi reconstituer le déroulement des événements afin de sortir de cette pyramide maudite ?
+Un homme se retrouve seul, dans une pièce sombre, sans aucun souvenir...
+Très vite, il se rend compte que cette pièce, dont les murs sont couverts de hiéroglyphes et dont le sol est jonché d'os, qui doivent être ici depuis plusieurs centaine d'années, n'est pas un endroit banal....
+Mais il a beau chercher, aucun souvenir ne lui revient....
+Il décide alors de tenter de s'échapper....
+Sortir de la salle ? Il y arrivera surement... Mais échapper à la momie qui le pourchassera dans le labyrinthe et les salles suivantes ? Tout devient incertain...
+Si néanmoins il y parvient, il trouvera sur son chemin les fragments d'une mystérieuse clé, qui en plus de lui ouvrir la porte de la sortie finale, lui ouvrira certainement les portes de sa mémoire...
 
 \newpage
 \section{Objet de l'étude}
 \subsection{Intérêt du projet en groupe}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-\subsection{Intérêt individuels}
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
-MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE 
+l'intérêt de ce projet pour le groupe réside essentiellement dans l'acquisition de compétences humaines
+permettant de travailler en groupe: la cohésion, l'écoute, la diplomatie, le respect de l'autre et des idées partagées.
+Le fait que les membres du groupe se complètent par leurs qualités ainsi que leurs défauts permet de s'accorder une plus grande confiance dans la réalisation des différentes tâches et de proposer un travail
+homogène et de qualité.
+Ce projet étant le premier, il nous permettra d'apprendre les rudiments du travail en groupe et d'être
+alors prêt pour affronter les années qui suivront (nous l'espérons, plus sereinement) ou du moins les
+prochains projets.
+
+\subsection{Intérêts individuels}
+\paragraph{Pour "Trasher"}
+Gagner en autonomie, apprendre à utiliser de nouveaux logiciels (tel Unity, TeXmaker ou encore GitHub), mettre en pratique les cours d'algorithmique et de programmation ou encore approfondir nos connaissances dans des domaines pas forcément abordés en cour, sont des avantages que ce projet nous apporte à tous.
+De plus les soutenances permettront de travailler nos qualités à l'oral, que ce soit l'élocution ou encore la gestion du stress. Ce projet, s'il est réalisé sérieusement ne peut être que bénéfique dans les apports qu'il peut nous faire.
 
 \newpage
 \section{Découpage du projet}
-\subsection{Découpage du jeu: description des différentes parties}
-
+\subsection{Découpage du jeu: description des différentes \newline parties}
+Découpage du jeu:
+\begin{itemize}
+\item[-] Écriture du scénario et des dialogues.
+\item[-] Graphisme: tout ce qui est design des objets, personnages, environnements.
+\item[-] Réseaux: la création d'un réseaux permettant notamment l'implémentation de la partie multi-joueur.
+\item[-] Gestion des événements, interfaces, et utilisateurs.
+\item[-] Création et gestion du site internet.
+\item[-] Implémentation des musiques, sons et bruitages.
+\end{itemize}
 \subsection{Répartition des taches}
 \paragraph{}
+\begin{center}
 \begin{tabular}{|c|c|c|c|}
 \hline 
 \rowcolor{cyan} Avancement & Soutenance 1 & Soutenance 2 & Soutenance 3 \\ 
 \hline 
-\cellcolor{lightgray}Graphisme & + &  &  \\ 
+\cellcolor{lightgray}Graphisme & \cellcolor{yellow} &  &  \\ 
 \hline 
-\cellcolor{lightgray}Script & + &  &  \\ 
+\cellcolor{lightgray}Script & \cellcolor{yellow} &  &  \\ 
 \hline 
-\cellcolor{lightgray}Scénario & ++ &  &  \\ 
+\cellcolor{lightgray}Scénario & \cellcolor{orange} &  &  \\ 
 \hline 
-\cellcolor{lightgray}Site Web & + &  &  \\ 
+\cellcolor{lightgray}Site Web & \cellcolor{yellow} &  &  \\ 
 \hline
-\cellcolor{lightgray}Réseau & + &  &  \\ 
+\cellcolor{lightgray}Réseau & \cellcolor{yellow} &  &  \\ 
 \hline 
 \cellcolor{lightgray}Musique/Son &  &  &  \\ 
 \hline 
@@ -97,25 +149,55 @@ MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE MA BITE
 \paragraph{}
 \begin{tabular}{|c|c|c|c|c|}
  \hline 
- \rowcolor{cyan}Tâches \ Pers. & Thomas & Thibal & Max & Flow \\ 
+ \rowcolor{cyan}Tâches \ Pers. & Trasher & Thibal & Max & Flow \\ 
  \hline 
- \cellcolor{lightgray}Graphisme & +++ &  &  &  \\ 
+ \cellcolor{lightgray}Graphisme & \cellcolor{red} &  &  & \cellcolor{yellow} \\ 
  \hline 
- \cellcolor{lightgray}Script &  & + & ++ &  \\ 
+ \cellcolor{lightgray}Script &  & \cellcolor{yellow} & \cellcolor{orange} &  \\ 
  \hline 
- \cellcolor{lightgray}Scénario & + & + & + & + \\ 
+ \cellcolor{lightgray}Scénario & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{yellow} \\ 
  \hline 
- \cellcolor{lightgray}Site Web &  & ++ &  &  \\ 
+ \cellcolor{lightgray}Site Web &  & \cellcolor{orange} &  &  \\ 
  \hline 
- \cellcolor{lightgray} Réseau & ++ &  &  & ++ \\ 
+ \cellcolor{lightgray} Réseau & \cellcolor{orange} &  &  & \cellcolor{orange} \\ 
  \hline 
- \cellcolor{lightgray}Musique/Son &  & + & + &  \\ 
+ \cellcolor{lightgray}Musique/Son &  & \cellcolor{yellow} & \cellcolor{yellow} &  \\ 
  \hline 
- \end{tabular}  
+ \end{tabular}
+ \
+\paragraph{Plus on va vers le rouge plus le niveau d'implication dans le domaine est élevé.} 
+\paragraph{}
+ \begin{tabular}{|c|c|c|c|}
+ \hline 
+\cellcolor{white} & \cellcolor{yellow} & \cellcolor{orange} & \cellcolor{red} \\ 
+ \hline 
+ \end{tabular}
+
+\end{center}
 \newpage
 \section{Ressources utilisées}
 \subsection{Le matériel}
+Le matériel principale sera nos ordinateurs, néanmoins nous avons aussi utilisé une tablette graphique
+pour la création des logos.
+Le plus gros du travail se fera donc a partir des ordinateurs, même si la consommation de nourriture
+peu recommandé pour le régime sera nécessaire pour travailler dans les conditions les plus correctes !
 \subsection{Les logiciels}
+Nous utiliserons les logiciels suivant pour mener notre projet a bien:
+\begin{itemize}
+\item[-] Unity : moteur de jeu 2D/3D permettant notamment à l'aide d'outils
+intuitifs (moteur physique, audio...) de réaliser des jeux en réseau et
+des animations.
+\item[-] Photoshop CC : retouche, traitement et dessin par
+ordinateur qui servira à la réalisation des graphismes 2D.
+\item[-] GIT : logiciel de gestion de versions qui permettra au groupe d'échanger du code et d’autres informations.
+\item[-] After effect / Sony Vegas Pro : permettant de réaliser des animations.
+\item[-] NotePad ++ : éditeur de texte générique qui servira à la réalisation
+du site internet
+\item[-] MAGIX Music Maker / FL Studio : utiles pour la
+réalisation des bandes son du jeu
+\item[-] Visual Studio 2017 / JetBrain's Rider : permettront la programmation en CSharp
+\item[-] Blender / Maya: permettront de réaliser les objets 3D présents dans le jeu
+\end{itemize}
 \subsection{Les ressources économiques}
 
 \newpage
