--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -153,15 +153,15 @@ Découpage du jeu:
  \hline 
  \cellcolor{lightgray}Graphisme & \cellcolor{red} &  &  & \cellcolor{yellow} \\ 
  \hline 
- \cellcolor{lightgray}Script &  & \cellcolor{yellow} & \cellcolor{orange} &  \\ 
+ \cellcolor{lightgray}Script &  & \cellcolor{yellow} & \cellcolor{red} & \cellcolor{yellow} \\ 
  \hline 
  \cellcolor{lightgray}Scénario & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{yellow} \\ 
  \hline 
- \cellcolor{lightgray}Site Web &  & \cellcolor{orange} &  &  \\ 
+ \cellcolor{lightgray}Site Web &  & \cellcolor{red} &  &  \\ 
  \hline 
- \cellcolor{lightgray} Réseau & \cellcolor{orange} &  &  & \cellcolor{orange} \\ 
+ \cellcolor{lightgray} Réseau & \cellcolor{orange} &  & \cellcolor{yellow} & \cellcolor{orange} \\ 
  \hline 
- \cellcolor{lightgray}Musique/Son &  & \cellcolor{yellow} & \cellcolor{yellow} &  \\ 
+ \cellcolor{lightgray}Musique/Son &  & \cellcolor{yellow} &  & \cellcolor{yellow} \\ 
  \hline 
  \end{tabular}
  \
