--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -29,9 +29,9 @@
 \tableofcontents
 \baselineskip = 20 pt
 \newpage
-
+\vspace*{\stretch{1}}
 \section{Introduction}
-Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523.
+  Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523.
 Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable, un jeu dans lequel un homme dont
 on ne connait pas les origines (du moins au début) doit s'échapper d'une pyramide, garde par une
 momie, entourée de mystère.
@@ -41,6 +41,8 @@ autours de ce projet, nous pourrons vous montrer le planning de déroulement du 
 outils nous comptons le réaliser, la gestion du temps et du travail que nous avons prévu.
 Pour clore cette introduction, on peut dire que ce travail peut être considéré comme le premier réel
 projet que nous devons faire sur une grande durée et dans la plus grande autonomie.
+\vspace*{\stretch{1}}
+
 
 \newpage
 \section {A propos du groupe}
@@ -64,7 +66,7 @@ Game designer et programmeur réseaux}
 Intéressé par le milieu de l'informatique et très souvent ayant été entouré par des personnes gravitant autour de ce domaine, j'ai rapidement été attiré par ce milieu. Ayant néanmoins que très peu pratiqué avant mon entrée a EPITA, ce fut une grande découverte, qui a été et qui est toujours, à la hauteur de mes espérances.
 
 Au sein du groupe Error 523, je suis principalement chargé du game design mais aussi de la partie réseaux et multi-joueur, ce qui va consister en une tâche de très grande importance, d'autant plus que j'aimerais faire du réseaux dans la suite de mon cursus à EPITA.
-
+   
 J'espère, grâce a ce projet, pouvoir améliorer mes compétences dans le monde de l'informatique, mais aussi dans ma capacité à travailler en groupe, et je compte bien mener ce projet à son terme avec le reste de mon équipe.
 
 \begin{center}
