--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -76,6 +76,16 @@ J'espère, grâce a ce projet, pouvoir améliorer mes compétences dans le monde
 
 J'ai intégré l'EPITA car je suis passionné par l'informatique depuis maintenant plusieurs années. J'étais néanmoins débutant en programmation mais j'ai redoubler d'effort pour rattraper mon retard. Cependant je n ai pas encore eu l'occasion de participer à un projet comme celui ci, ce qui est donc une très bonne opportunité. En effet ce projet va me permettre de gagner en maturité mais également de pouvoir progresser aussi bien en programmation qu'en travail d'équipe. Le projet Origin is Unreachable est un projet qui me tient à coeur et je vais m'investir au maximum dans ce dernier. Mon rôle au sein de ce groupe sera le développement du site web, le scénario, le script et la partie audio. 
 
+\begin{center}
+\textbf{Maxime CHARDON « Zaphod» - 18 ans – Ancien Terminal S
+Programmeur scripts et programmeur réseaux}
+\end{center}
+
+Ayant un entourage travaillant dans le milieu de l’informatique et de par l’ampleur que prend celle-ci dans la société autant actuel que futur, l’idée de travailler dans ce domaine met apparue nettement.
+
+Malgré cela je n’ai que très peu pratiqué avant mon entré à l’EPITA et ce premier semestre était à la hauteur de mes espérances. J’ai très vite voulue participé à des projets de groupe ou individuel et en ayant pris connaissance du projet de fin d’année, j’ai vite commencé à étudié la programmation avec Unity. J’ai aussi pris part à de nombreuses conférences ou encore évènement comme une « Jam » où nous avons avec un camarade rendu un jeu fait en une dizaines d’heures avec l’aide de Unity. Voilà pourquoi au sein de ce projet je m’occuperai principalement des scripts CSharp avec unity mais aussi de la partie réseau.
+
+J’espère de ce projet qu’il m’apporte une certaine expérience dans le domaine de l’informatique, mais aussi dans le travail d’équipe qui est selon moi quelque chose de primordial dans ce milieu. Je compte mener ce projet à son terme avec mon équipe.
 \newpage
 \section{Origine et Nature du projet}
 \subsection{Origine du projet}
