--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -7,30 +7,22 @@
 \usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{colortbl}
-
 \fancyhead{}
-
 \fancyhead[R]{\slshape \rightmark}
 \fancyhead[L]{}
-
-%Configuration de la première page%
-\title{\textbf { \huge{\underline{ERROR-523}} \bigbreak  \large{Origin Is Unreachable}}}
-\author{SOUBRAND Florentin, VATON Thomas, LEMPEREUR Thibault, CHARDON Maxime}
-\date {2 février 2018 - 29 mai 2018}
 
 \begin{document}
 \pagestyle{fancy}
 
-
-
-
-\newpage
-\thispagestyle{empty}
-\tableofcontents
 \baselineskip = 20 pt
 \newpage
 \vspace*{\stretch{1}}
-\section{Introduction}
+\title{Introduction}
+\begin{center}
+\begin{Large}
+\textbf{Introduction}
+\end{Large}
+\end{center}
   Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523.
 Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable, un jeu dans lequel un homme dont
 on ne connait pas les origines (du moins au début) doit s'échapper d'une pyramide, garde par une
@@ -42,7 +34,9 @@ outils nous comptons le réaliser, la gestion du temps et du travail que nous av
 Pour clore cette introduction, on peut dire que ce travail peut être considéré comme le premier réel
 projet que nous devons faire sur une grande durée et dans la plus grande autonomie.
 \vspace*{\stretch{1}}
-
+\newpage
+\thispagestyle{empty}
+\tableofcontents
 
 \newpage
 \section {A propos du groupe}
@@ -57,7 +51,7 @@ De plus, ayant tous des domaines de prédilections dans l'informatique, la répa
 \end{center}
 \newpage
 \subsection{Présentation des membres}
-
+\baselineskip = 16 pt
 \begin{center}
 \textbf{Thomas Vaton "Trasher" - 18 ans - Ancien Terminale S\newline
 Game designer et programmeur réseaux}
@@ -75,7 +69,7 @@ J'espère, grâce a ce projet, pouvoir améliorer mes compétences dans le monde
 \end{center}
 
 J'ai intégré l'EPITA car je suis passionné par l'informatique depuis maintenant plusieurs années. J'étais néanmoins débutant en programmation mais j'ai redoubler d'effort pour rattraper mon retard. Cependant je n ai pas encore eu l'occasion de participer à un projet comme celui ci, ce qui est donc une très bonne opportunité. En effet ce projet va me permettre de gagner en maturité mais également de pouvoir progresser aussi bien en programmation qu'en travail d'équipe. Le projet Origin is Unreachable est un projet qui me tient à coeur et je vais m'investir au maximum dans ce dernier. Mon rôle au sein de ce groupe sera le développement du site web, le scénario, le script et la partie audio. 
-
+\newpage
 \begin{center}
 \textbf{Maxime CHARDON « Zaphod» - 18 ans – Ancien Terminal S
 Programmeur scripts et programmeur réseaux}
@@ -86,6 +80,17 @@ Ayant un entourage travaillant dans le milieu de l’informatique et de par l’
 Malgré cela je n’ai que très peu pratiqué avant mon entré à l’EPITA et ce premier semestre était à la hauteur de mes espérances. J’ai très vite voulue participé à des projets de groupe ou individuel et en ayant pris connaissance du projet de fin d’année, j’ai vite commencé à étudié la programmation avec Unity. J’ai aussi pris part à de nombreuses conférences ou encore évènement comme une « Jam » où nous avons avec un camarade rendu un jeu fait en une dizaines d’heures avec l’aide de Unity. Voilà pourquoi au sein de ce projet je m’occuperai principalement des scripts CSharp avec unity mais aussi de la partie réseau.
 
 J’espère de ce projet qu’il m’apporte une certaine expérience dans le domaine de l’informatique, mais aussi dans le travail d’équipe qui est selon moi quelque chose de primordial dans ce milieu. Je compte mener ce projet à son terme avec mon équipe.
+
+\begin{center}
+\textbf{Florentin SOUBRAND « Flow» - 18 ans – Ancien Terminal S \newline
+Game desin, programmeur réseaux et Chef de Projet}
+\end{center}
+	Je me suis tourné vers l'informatique depuis l'âge de 14 ans et ai exploré quelques langages de programmation jusqu'au début du lycée. C'est pourquoi mon orientation ne posait pas de problème. Ainsi mes débuts à EPITA furent assez simple du côté de l'algorithmique et de la programmation.
+
+	Mais à présent tout est nouveau, je ne connaissais ni Unity ni réellement le CSharp, il y encore 2 semaines. J'attends de ce projet qu'il m'aide à partager mes connaissances et en acquérir de nouvelles grâce au groupe. De plus étant chef du groupe je vais devoir apprendre à gérer une équipe ainsi que les conflits qui y surviendront.Ce qui me parait être une très bonne expérience pour la suite de ma scolarité.
+	
+	Le cursus est les projets proposés sont engageants et encourageants : ils m'ont permis de m'investir pleinement dans les TP et dans ce Jeu que nous allons réaliser durant cette fin d'année.
+\baselineskip = 20 pt
 \newpage
 \section{Origine et Nature du projet}
 \subsection{Origine du projet}
@@ -146,6 +151,7 @@ Découpage du jeu:
 \item[-] Création et gestion du site internet.
 \item[-] Implémentation des musiques, sons et bruitages.
 \end{itemize}
+\newpage
 \subsection{Répartition des taches}
 \paragraph{}
 \begin{center}
