--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -9,15 +9,16 @@
 \usepackage{colortbl}
 \fancyhead{}
 \fancyhead[R]{\slshape \rightmark}
-\fancyhead[L]{}
+\fancyfoot[R]{\includegraphics[scale=0.05]{logo.png}}
+\fancyfoot[L]{\includegraphics[scale=0.015]{logo-epita.png}}
 
 \begin{document}
 \pagestyle{fancy}
-
+\thispagestyle{empty}
 \baselineskip = 20 pt
 \newpage
 \vspace*{\stretch{1}}
-\title{Introduction}
+
 \begin{center}
 \begin{Large}
 \textbf{Introduction}
