Add&Modify Files
Add pagepres and modify CdCharges

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -55,7 +55,7 @@ De plus, ayant tous des domaines de prédilections dans l'informatique, la répa
 \baselineskip = 16 pt
 \begin{center}
 \textbf{Thomas Vaton "Trasher" - 18 ans - Ancien Terminale S\newline
-Game designer et programmeur réseaux}
+Game designer et Programmeur réseaux}
 \end{center}
 
 Intéressé par le milieu de l'informatique et très souvent ayant été entouré par des personnes gravitant autour de ce domaine, j'ai rapidement été attiré par ce milieu. Ayant néanmoins que très peu pratiqué avant mon entrée a EPITA, ce fut une grande découverte, qui a été et qui est toujours, à la hauteur de mes espérances.
@@ -65,7 +65,7 @@ Au sein du groupe Error 523, je suis principalement chargé du game design mais 
 J'espère, grâce a ce projet, pouvoir améliorer mes compétences dans le monde de l'informatique, mais aussi dans ma capacité à travailler en groupe, et je compte bien mener ce projet à son terme avec le reste de mon équipe.
 
 \begin{center}
-\textbf{Thibault LEMPEREUR "Thibal" - 18 ans - Ancien Terminal S\newline Développeur web}
+\textbf{Thibault LEMPEREUR "Thibal" - 18 ans - Ancien Terminal S\newline Développeur web et Programmeur scripts}
 
 \end{center}
 
@@ -73,7 +73,7 @@ J'ai intégré l'EPITA car je suis passionné par l'informatique depuis maintena
 \newpage
 \begin{center}
 \textbf{Maxime CHARDON « Zaphod» - 18 ans – Ancien Terminal S
-Programmeur scripts et programmeur réseaux}
+Programmeur scripts et Programmeur réseaux}
 \end{center}
 
 Ayant un entourage travaillant dans le milieu de l’informatique et de par l’ampleur que prend celle-ci dans la société autant actuel que futur, l’idée de travailler dans ce domaine met apparue nettement.
@@ -84,7 +84,7 @@ J’espère de ce projet qu’il m’apporte une certaine expérience dans le do
 
 \begin{center}
 \textbf{Florentin SOUBRAND « Flow» - 18 ans – Ancien Terminal S \newline
-Game desin, programmeur réseaux et Chef de Projet}
+Game desin, Programmeur réseaux et Chef de Projet}
 \end{center}
 	Je me suis tourné vers l'informatique depuis l'âge de 14 ans et ai exploré quelques langages de programmation jusqu'au début du lycée. C'est pourquoi mon orientation ne posait pas de problème. Ainsi mes débuts à EPITA furent assez simple du côté de l'algorithmique et de la programmation.
 
@@ -225,7 +225,6 @@ réalisation des bandes son du jeu
 \item[-] Visual Studio 2017 / JetBrain's Rider : permettront la programmation en CSharp
 \item[-] Blender: permettront de réaliser les objets 3D présents dans le jeu
 \end{itemize}
-\subsection{Les ressources économiques}
 
 \newpage
 \section{Conclusion}	
