--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -113,7 +113,7 @@ description...
 \subsubsection{Type de jeu}
 Notre projet est un jeu d'aventure basé sur l'horreur et des énigmes, le tout à la première personne.
 \subsubsection{Gameplay}
-Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé avec une momie qui le pourchasse. Pour finir le jeu ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigme et de course poursuite dans une labyrinthe.
+Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé avec une momie qui le pourchasse. Pour finir le jeu, ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigme et de course poursuite dans un labyrinthe.
 Pour le multi-joueur, il se déroule à 5 maximum, avec un joueur qui incarnera la momie et pourra à sa guise placer des pièges ou déchiqueter ses victimes.
 Les autres devront comme dans la partie solo essayer de s'échapper.
 \subsubsection{Scénario}
@@ -132,13 +132,13 @@ permettant de travailler en groupe: la cohésion, l'écoute, la diplomatie, le r
 Le fait que les membres du groupe se complètent par leurs qualités ainsi que leurs défauts permet de s'accorder une plus grande confiance dans la réalisation des différentes tâches et de proposer un travail
 homogène et de qualité.
 Ce projet étant le premier, il nous permettra d'apprendre les rudiments du travail en groupe et d'être
-alors prêt pour affronter les années qui suivront (nous l'espérons, plus sereinement) ou du moins les
-prochains projets.
+alors prêt pour affronter les années qui suivront ou du moins les
+prochains projets (nous l'espérons, plus sereinement).
 
 \subsection{Intérêts individuels}
-\paragraph{Pour "Trasher"}
+\paragraph{}
 Gagner en autonomie, apprendre à utiliser de nouveaux logiciels (tel Unity, TeXmaker ou encore GitHub), mettre en pratique les cours d'algorithmique et de programmation ou encore approfondir nos connaissances dans des domaines pas forcément abordés en cour, sont des avantages que ce projet nous apporte à tous.
-De plus les soutenances permettront de travailler nos qualités à l'oral, que ce soit l'élocution ou encore la gestion du stress. Ce projet, s'il est réalisé sérieusement ne peut être que bénéfique dans les apports qu'il peut nous faire.
+De plus les soutenances permettront de travailler nos qualités à l'oral, que ce soit l'élocution ou encore la gestion du stress. Ce projet, s'il est réalisé sérieusement ne peut être que bénéfique dans les apports qu'il peut nous procurer.
 
 \newpage
 \section{Découpage du projet}
@@ -227,5 +227,13 @@ réalisation des bandes son du jeu
 \end{itemize}
 
 \newpage
-\section{Conclusion}	
+\baselineskip = 18 pt
+\section{Conclusion}
+Ce projet est un donc un défi que nous allons relever du mieux que nous pourrons, nous allons mettre le meilleur de nous même pour le réussir le mieux possible.
+
+Il représente un enjeu de taille du fait que nous débutons globalement dans le milieu de l'informatique, il permettra de développer nos compétences en même temps que la réalisation d'un projet plus que concret (aucun d'entre nous ne se serait imaginé, il y a ne serait-ce que deux ans, qu'un jour il créerait un jeu vidéo !).
+
+Nous nous efforcerons de coller à ce cahier des charges qui nous permet d'ores et déjà de planifier notre travail, à la fin de ce projet nous serons donc en mesure de proposer un jeu vidéo en 3D assez complet dans le style que nous avons décidé de lui donner.
+
+En somme, ce projet nécessitera un travail de longue haleine qui permettra aux élèves de mettre en pratique tout ce qu'ils ont appris et tout ce qu'ils apprendront par eux-mêmes.
 \end{document}
